# prompt_generator

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.PowerFolder/: .PowerFolder.db  FolderInfo  FolderStatistic
.PowerFolder/meta/: Members
.PowerFolder/meta/.PowerFolder/: .PowerFolder.db  FolderInfo  FolderStatistic
docs/: prompt_eval_log.md  pull_request_template.md
prompts/shared/: coding_rules.md  naming_conventions.md  output_format_default.md  style_rules.md
prompts/system/: persona_engineer.md  persona_tester.md  persona_tutor.md
prompts/tasks/: engineer_prompt_create_feature_v1.md  engineer_prompt_explain_code_v1.md  engineer_prompt_refactor_code_v1.md  explain_concept_v1.md  generate_python_code_v1.md  review_code_v1.md
src/: app.py  llm_workflow_example.py  prefill_support.py  prompt_builder.py  prompt_generator.py  scenario_manager.py
tests/: test_prefill_support.py  test_prompt_builder.py  test_prompt_generator.py  test_scenario_manager.py
tests/prompt_cases/: engineer_case_notes_cleaner.json  tester_case_code_review.json  tutor_case_recursion.json
