[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-generator-repo"
version = "0.1.0"
description = "Lokale Prompt-Generator Anwendung mit Versionierung und Testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.35"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
